force-app/main/default/objects/ClinicalEncounter/fields/Admission_Reason__c.field-meta.xml
<CustomField>
    <fullName>Admission_Reason__c</fullName>
    <label>Admission Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>