force-app/main/default/objects/ClinicalEncounter/fields/Admission_Recommended__c.field-meta.xml
<CustomField>
    <fullName>Admission_Recommended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Admission Recommended</label>
    <type>Checkbox</type>
</CustomField>