force-app/main/default/objects/ClinicalEncounter/fields/Doctor__c.field-meta.xml
<CustomField>
    <fullName>Doctor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Attending doctor</description>
    <label>Doctor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Clinical_Encounters</relationshipName>
    <type>Lookup</type>
</CustomField>