force-app/main/default/objects/ClinicalEncounter/fields/Doctor_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Feedback__c</fullName>
    <label>Doctor Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>