force-app/main/default/objects/ClinicalEncounter/fields/Encounter_Date__c.field-meta.xml
<CustomField>
    <fullName>Encounter_Date__c</fullName>
    <description>Date and time of encounter</description>
    <label>Encounter Date</label>
    <type>DateTime</type>
</CustomField>