force-app/main/default/objects/ClinicalEncounter/fields/Encounter_Location__c.field-meta.xml
<CustomField>
    <fullName>Encounter_Location__c</fullName>
    <label>Encounter Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hospital Branch</fullName>
            </value>
            <value>
                <fullName>Home Visit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>