force-app/main/default/objects/ClinicalEncounter/fields/Encounter_Type__c.field-meta.xml
<CustomField>
    <fullName>Encounter_Type__c</fullName>
    <description>Type of encounter</description>
    <label>Encounter Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outpatient</fullName>
            </value>
            <value>
                <fullName>Inpatient</fullName>
            </value>
            <value>
                <fullName>Surgery</fullName>
            </value>
            <value>
                <fullName>House Visit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>