force-app/main/default/objects/ClinicalEncounter/fields/Surgery_Reason__c.field-meta.xml
<CustomField>
    <fullName>Surgery_Reason__c</fullName>
    <label>Surgery Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>