force-app/main/default/objects/ClinicalEncounter/fields/Surgery_Recommended__c.field-meta.xml
<CustomField>
    <fullName>Surgery_Recommended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Surgery Recommended</label>
    <type>Checkbox</type>
</CustomField>