force-app/main/default/objects/ClinicalEncounter/listViews/Prescription_View.listView-meta.xml
<ListView>
    <fullName>Prescription_View</fullName>
    <columns>Name</columns>
    <columns>Patient</columns>
    <columns>StartDate</columns>
    <columns>EndDate</columns>
    <columns>Status</columns>
    <columns>Priority</columns>
    <columns>Category</columns>
    <columns>Facility</columns>
    <filterScope>Mine</filterScope>
    <label>Prescription View</label>
</ListView>